--- a/modules/ROOT/pages/6.5-release-notes.adoc
+++ b/modules/ROOT/pages/6.5-release-notes.adoc
@@ -223,6 +223,13 @@ This presentation makes it clearer that any Quickbar buttons will be applied to 
 == Additions
 {productname} 6.5 also includes the following additions:
 
+=== `tabpanel` labels in {productname} dialogs can now word wrap for better readability with long labels.
+//#TINY-9947
+
+For {productname} 6.5, improvements were made to the `tabpanel` dialogs: labels on the tabs can now wrap to multiple lines. This improves the readability of the tab labels, particularly when longer labels are displayed.
+
+In particular, the keyboard navigation text in the help dialog is now readable in all languages, without compromising the width of the dialog tab buttons.
+
 === Support for the `h` hash parameter in vimeo video url in the Media plugin.
 //#TINY-9830
 
@@ -238,6 +245,15 @@ As a result, embedding unlisted Vimeo videos into a {productname} editor using t
 == Changes
 
 {productname} 6.5 also incorporates the following changes:
+
+=== The {productname} *Help* dialog was restored to medium width for better readability.
+//#TINY-9947
+
+A change was made in {productname} 6.4 that caused the help dialog to become narrower.
+
+As a result, users experienced difficulty in reading the content, especially in languages other than English.
+
+To address this issue, the width of the help dialog has been restored to its previous size, ensuring better readability for all users.
 
 === List items in a combo box were not announced by screen readers.
 //#TINY-9280
