--- a/modules/ROOT/pages/6.5-release-notes.adoc
+++ b/modules/ROOT/pages/6.5-release-notes.adoc
@@ -36,13 +36,14 @@ The {productname} 6.5 release includes an accompanying release of the **Advanced
 
 **Advanced Templates** 1.2.0 includes the following fix.
 
-=== A selected item within its parent directory in tree components, would not retain as a highlighted selection after collapsing its directory.
+=== A selected item within its parent directory in tree components, did not remain selected after closing the directory
 //#TINY-9715
 
-In previous versions of {productname}, selecting a leaf component within its parent directory would loose its state selection after collapsing and re-expanding the parent directory.
+In previous versions of the **Advanced Templates** plugin, selecting a component in a leaf within its parent directory and then closing the directory caused the selection to be lost.
 
-A fix for this was implemented in {productname} 6.5, which now tracks the active state for a selected leaf component before and after collapsing or re-expanding the parent directory.
+This new release of the **Advanced Templates** plugin corrects this. It now tracks the selected leaf’s active state before and after collapsing or expanding the leaf’s parent directory.
 
+For information on the **Advanced Templates** plugin, see: xref:advanced-templates.adoc[Advanced Templates].
 [[accompanying-premium-plugin-end-of-life-announcement]]
 == Accompanying Premium Plugin end-of-life announcement
 
