--- a/modules/ROOT/pages/changelog.adoc
+++ b/modules/ROOT/pages/changelog.adoc
@@ -8,6 +8,7 @@ NOTE: This is the {productname} Community version changelog. For information abo
 
 === Fixed
 * Fixed a regression where pasting an image url would result in the url being inserted as plain text instead of the image being inserted.
+* It was not possible to press space to insert a space character inside a summary element on Firefox.
 
 == 6.5.0 - 2023-06-13
 
