DOC-2080: TinyMCE 6.5.1 community docs release (#2791)
* DOC-2080: changelog.adoc

Brought /tinymce-docs/modules/ROOT/pages/changelog.adoc
into sync with /tinymce/modules/tinymce/CHANGELOG.md.

* DOC-2080: changelog.adoc

Added 2nd entry, pertaining to spacebar-not-working-in-summary-elements-in-Firefox, to 6.5.1 section.

* DOC-2080: .api-version

Value herein changed: s/6.5.0/6/5/1/.

--- a/modules/ROOT/pages/changelog.adoc
+++ b/modules/ROOT/pages/changelog.adoc
@@ -4,6 +4,12 @@
 
 NOTE: This is the {productname} Community version changelog. For information about the latest {cloudname} or {enterpriseversion} Release, see: xref:release-notes.adoc[{productname} Release Notes].
 
+== 6.5.1 - 2023-06-19
+
+=== Fixed
+* Fixed a regression where pasting an image url would result in the url being inserted as plain text instead of the image being inserted.
+* It was not possible to press space to insert a space character inside a summary element on Firefox.
+
 == 6.5.0 - 2023-06-13
 
 === Added
