--- a/modules/ROOT/pages/6.5-release-notes.adoc
+++ b/modules/ROOT/pages/6.5-release-notes.adoc
@@ -38,11 +38,17 @@ The {productname} 6.5 release includes an accompanying release of the **Spell Ch
 
 ==== New `mceSpellcheckUpdate` command
 
-The new `mceSpellcheckUpdate` command allows users to trigger a check for misspelled words in the editor content, and includes any spelling suggestions for the misspelt words. This allows users to verify their spelling all at once without the use of the Spellchecker dialog, with any suggestions available from a context menu.
+The new `mceSpellcheckUpdate` command allows users to trigger a check for misspelled words in the editor content, and includes any spelling suggestions for the misspelt words.
+
+This allows users to verify their spelling all at once without the use of the Spellchecker dialog, with any suggestions available from a context menu.
 
 ==== New `SpellcheckerUpdated` event
 
-The new `SpellcheckerUpdated` event is triggered each time the editor content is updated to display any new misspelt words, once suggestions are provided for those misspelt words. This event is currently supported when using the `mceSpellcheckUpdate` command or when opening the dialog. This event is currently not supported in As-you-type mode.
+The new `SpellcheckerUpdated` event is triggered each time the editor content is updated to display any new misspelt words, once suggestions are provided for those misspelt words.
+
+This event is currently supported when using the `mceSpellcheckUpdate` command or when opening the dialog.
+
+NOTE: This event is currently not supported in As-you-type mode.
 
 ==== New `getSpellingErrors()` API
 The new `getSpellingErrors()` API allows users to retrieve a list of each misspelling in the editor content.
