--- a/modules/ROOT/pages/6.5-release-notes.adoc
+++ b/modules/ROOT/pages/6.5-release-notes.adoc
@@ -59,14 +59,14 @@ For information on using premium skins and icon packs, see: xref:premium-skins-a
 == Additions
 {productname} 6.5 also includes the following additions:
 
-=== Added `TinyState` module that contains transactional functions for editor states.
+=== Toolbar and menu items were not being disabled correctly when selecting noneditable elements inside a `contenteditable= "false"` root.
 //#TINY-9669
 
-In previous versions of {productname}, `TinyState` module was introduced, which includes transactional functions designed for editor states. This addition addressed an issue where toolbar items were not being disabled correctly when selecting `contenteditable= "false"` contents in a `contenteditable= "false"` root.
+In previous versions of {productname}, an issue was identified where toolbar and menu items were not being disabled correctly when selecting `contenteditable= "false"` contents inside a `contenteditable= "false"` root.
 
-As a consequence, toolbar buttons and menu items remained enabled even when they couldn't be applied to the current selection.
+As a consequence, toolbar buttons and menu items would appear to be enabled even though the buttons and menu items were in a disabled state based on the users current selection.
 
-In {productname} 6.5, a fix was implemented that ensures that toolbar buttons and menu items are now properly disabled based on the selection. As a result, when `contenteditable= "false"` content is selected in a `contenteditable= "false"` root, the toolbar and menu items are disabled. In addition, if `contenteditable= "true"` contents are selected, the toolbars and menu items are re-enabled.
+A fix was applied in {productname} 6.5, that now disables the toolbar buttons and menu items based on the users selection. In addition, if `contenteditable= "true"` contents are selected, the toolbars and menu items are re-enabled.
 
 [[changes]]
 == Changes
