DOC-1979: Added TINY-9679 to the release notes. (#2743)
* DOC-1979: Added TINY-9679 to the release notes.

* Edited as per @HAFRMO’s suggestion

Co-authored-by: Karl Kemister-Sheppard <karlkemistersheppard@gmail.com>

* Edits and copy-edits.

---------

Co-authored-by: brian-forte <brian.forte@tiny.cloud>

--- a/modules/ROOT/pages/6.5-release-notes.adoc
+++ b/modules/ROOT/pages/6.5-release-notes.adoc
@@ -371,6 +371,15 @@ In {productname} 6.5, the editor’s *HTML 4* schema has been corrected. Block e
 
 {productname} 6.5 also includes the following bug fixes:
 
+=== In some circumstances, the selected element would, when it was reused or otherwise reset, not have an initial selected value when it was expected to.
+//#TINY-9679
+
+Previously, issues between the host browser and the editor switching between an element’s children, lead to the element presenting an erroneous empty state when displayed.
+
+To resolve this, such elements can no longer be empty unless the user explicitly sets them as such.
+
+In {productname} 6.5, these elements will now have a populated value unless the user specifically chooses an empty selection.
+
 === Initializing the editor with a pre-inserted table displayed resize handles even when the editor was not focused
 //#TINY-9748
 
