Duplicate line removed; and unmarked-up instance of ‘Advanced Templates’ marked-up.

--- a/modules/ROOT/pages/6.5-release-notes.adoc
+++ b/modules/ROOT/pages/6.5-release-notes.adoc
@@ -37,12 +37,10 @@ The {productname} 6.5 release includes an accompanying release of the **Advanced
 
 **Advanced Templatess** 1.2.0 includes one improvement:
 
-**Advanced Templatess** 1.2.0 includes one improvement:
-
 === The Advanced Template UI now provides controls for a preconfigured operations set.
 //#TINY-9756
 
-This Advanced Templates plugin update introduces a user interface that offers controls tailored for a predefined range of operations. This simplifies the user experience by only presenting the options relevant to the tasks at hand.
+This **Advanced Templates** plugin update introduces a user interface that offers controls tailored for a predefined range of operations. This simplifies the user experience by only presenting the options relevant to the tasks at hand.
 
 For information on the **Advanced Templatess** plugin, see: xref:advanced-templates.adoc[Advanced Templates].
 
